--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
-*.pyc
-__pycache__
+.*.sw[po]
+
+*.py[cod]
+__pycache__/_
+venv/
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
